--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.2.1",
-    "@supabase/ui": "^0.6.1",
+    "jhq": "^0.2.0",
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
